Update README and finalize features (Localization, Animations, UX)

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -55,6 +55,15 @@
 			],
 			"isBackground": false,
 			"group": "test"
+		},
+		{
+			"label": "Append CSS",
+			"type": "shell",
+			"command": "echo \"Appending CSS\"",
+			"args": [],
+			"isBackground": false,
+			"problemMatcher": [],
+			"group": "none"
 		}
 	]
 }
