Optimize launch speed by setting compression to store

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
       "forceCodeSigning": false,
       "artifactName": "text-differ.${ext}"
     },
+    "compression": "store",
     "linux": {
       "target": "AppImage"
     },
